app-test/testdata/typesystem/neg/algebraic-type-duplicate-field/src/adt.cal
namespace adt:
    type T : (int a, bool a) end // error
    actor DuplicateField() ==> T OUT:
        do
            OUT <-- T(1, false);
        end
    end
end